add pytables to run an windows

--- a/Python/env.yaml
+++ b/Python/env.yaml
@@ -8,6 +8,7 @@ dependencies:
   - torchvision=0.14.0
   - torchaudio=0.13.0
   - cvxopt
+  - pytables
   - pip:
     - contextualbandits
     - progressbar2
