hopefully improved env file and faster test script

--- a/Python/env.yaml
+++ b/Python/env.yaml
@@ -1,25 +1,27 @@
 name: fact
 channels:
   - pytorch
+  - conda-forge
   - defaults
 dependencies:
   - python=3.8
+  - pip=22.2.2
   - pytorch=1.13.0
   - torchvision=0.14.0
   - torchaudio=0.13.0
   - cvxopt
+  - pandas
+  - numpy
+  - matplotlib
+  - scipy
+  - scikit-learn
   - pytables
   - pip:
-    - contextualbandits
+    # - contextualbandits
     - progressbar2
     - joblib
     - cma
     - fairlearn
-    - pandas
-    - matplotlib
-    - numpy
-    - scipy
-    - scikit-learn
     - h5py
     - tables
     - parglare
