rename environment and ajdust readme

--- a/Python/env.yaml
+++ b/Python/env.yaml
@@ -1,4 +1,4 @@
-name: fact
+name: MAC_edited
 channels:
   - pytorch
   - conda-forge
@@ -6,8 +6,6 @@ channels:
 dependencies:
   - python=3.8
   - pip=22.2.2
-  - pytorch=1.13.0
-  - torchvision=0.14.0
   - torchaudio=0.13.0
   - cvxopt
   - pandas
@@ -17,7 +15,6 @@ dependencies:
   - scikit-learn
   - pytables
   - pip:
-    # - contextualbandits
     - progressbar2
     - joblib
     - cma
@@ -25,3 +22,5 @@ dependencies:
     - h5py
     - tables
     - parglare
+    - torch==1.13
+    - torchvision==0.14.0
